Use ukm::SourceId instead of too-small int32_t for UKM reports.

Without this we end up using bogus source ids for reporting to UKM
which end up dropped.

BUG=870407
TEST=none

Change-Id: I6dd43a70dad670613c9bffe440a5f4d8934d3a42
Reviewed-on: https://chromium-review.googlesource.com/1161162
Reviewed-by: Justin DeWitt <dewittj@chromium.org>
Reviewed-by: Steven Holte <holte@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580337}
Former-commit-id: 0190a578443a0dbac2154187b763d1f451a66f54