media/mojo/services/watch_time_recorder.cc
@@ -344,7 +344,7 @@ void WatchTimeRecorder::RecordUkmPlaybackData() {
   }
 
   for (auto& ukm_record : ukm_records_) {
-    const int32_t source_id = ukm_recorder->GetNewSourceID();
+    const ukm::SourceId source_id = ukm_recorder->GetNewSourceID();
 
     // TODO(crbug.com/787209): Stop getting origin from the renderer.
     ukm_recorder->UpdateSourceURL(source_id, untrusted_top_origin_.GetURL());
